--- a/views/pages/admin/allBooking.ejs
+++ b/views/pages/admin/allBooking.ejs
@@ -18,43 +18,35 @@
                             <table class="table table-bordered data-table">
                                 <thead>
                                     <tr>
-                                        <th>Rendering engine</th>
-                                        <th>Browser</th>
-                                        <th>Platform(s)</th>
-                                        <th>Engine version</th>
+                                        <th>Image</th>
+                                        <th>Category</th>
+                                        <th>Date</th>
+                                        <th>Time</th>
+                                        <th>Status</th>
+                                        <th>Show Detail</th>
+
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="gradeX">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 4.0</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">4</td>
+                                    <% data.forEach(booking => { %>
+                                    <tr>
+                                        <td>
+                                            <%if (booking.val().images && booking.val().images[0].length > 0) {%>
+                                            <img src="<%= booking.val().images[0]%>"
+                                                style="width: 200px; height: 200px;"
+                                                class="img-responsive img-thumbnail" />
+                                            <%}%>
+                                        </td>
+                                        <td><%= booking.val().category %></td>
+                                        <td><%= booking.val().date %> </td>
+                                        <td><%= booking.val().time %></td>
+                                        <td><%= booking.val().status %></td>
+                                        <td><a href="/admin/bookingDetail?id=<%= booking.val().id %>"
+                                                class="btn btn-block btn-primary">SHOW DETAIL</a></td>
+
                                     </tr>
-                                    <tr class="gradeC">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 5.0</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">5</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 5.5</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">5.5</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 6</td>
-                                        <td>Win 98+</td>
-                                        <td class="center">6</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                                    <% }); %>
+                                </tbody>                            </table>
                         </div>
                     </div>
                 </div>
