--- a/views/pages/admin/complains.ejs
+++ b/views/pages/admin/complains.ejs
@@ -18,41 +18,24 @@
                             <table class="table table-bordered data-table">
                                 <thead>
                                     <tr>
-                                        <th>Rendering engine</th>
-                                        <th>Browser</th>
-                                        <th>Platform(s)</th>
-                                        <th>Engine version</th>
+                                        <th>Complain</th>
+                                        <th>DateTime</th>
+                                        
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="gradeX">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 4.0</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">4</td>
-                                    </tr>
-                                    <tr class="gradeC">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 5.0</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">5</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 5.5</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">5.5</td>
-                                    </tr>
-                                    <tr class="gradeA">
-                                        <td>Trident</td>
-                                        <td>Internet
-                                            Explorer 6</td>
-                                        <td>Win 98+</td>
-                                        <td class="center">6</td>
-                                    </tr>
+                                    <% data.forEach(complain => { %>
+                                        <tr>
+                            
+                                            <td><%= complain.val().complain %></td>
+                                            <td><%= complain.val().dateTime %> </td>
+                                    
+                                            <td><a href="/admin/complainDetail?id=<%= complain.val().id %>"
+                                                    class="btn btn-block btn-primary">SHOW DETAIL</a></td>
+    
+                                        </tr>
+                                        <% }); %>
+
                                 </tbody>
                             </table>
                         </div>
